[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarmkit"
version = "0.1.0"
description = "A swarm intelligence multi-agent framework for orchestrating AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Officethree Technologies", email = "hello@officethree.com" },
]
keywords = ["ai", "agents", "swarm", "multi-agent", "orchestration", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/SwarmKit"
Repository = "https://github.com/MukundaKatta/SwarmKit"
Issues = "https://github.com/MukundaKatta/SwarmKit/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
